<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/book_detail_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/book_preview"
                android:src="@drawable/adult_blur_books" />

            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/book_detail_image"
                android:layout_alignRight="@id/book_detail_image"
                android:layout_margin="@dimen/card_margin"
                android:text="@string/language_sample"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />

            <LinearLayout
                android:id="@+id/rating_and_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_margin="@dimen/card_margin"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rating"
                    style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressBackgroundTint="@color/colorAccent"
                    android:progressTint="@color/colorAccent"
                    android:rating="2.5"
                    android:stepSize="1" />

                <TextView
                    android:id="@+id/rating_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:gravity="center"
                    android:text="@string/rating_count_sample"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            </LinearLayout>


            <TextView
                android:id="@+id/author_and_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/rating_and_reviews"
                android:layout_margin="@dimen/card_margin"
                android:text="@string/author_title_sample"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/book_detail_image"
                android:layout_margin="@dimen/card_margin"
                android:background="@color/colorPrimary" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/book_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:text="@string/price_sample"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/book_published_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:text="@string/published_date_and_publisher_sample"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/book_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:text="@string/book_details_sample"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/book_ISBN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:text="@string/isbn_sample"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


</LinearLayout>


